back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: NodePort
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: back
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: back
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: NodePort
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: back
    spec:
      containers:
      - image: localhost:6000/ynov_projet_devops_back:latest
        imagePullPolicy: ""
        name: back
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
