backup-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: backup-db
  name: backup-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backup-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: backup-db
    spec:
      containers:
      - image: localhost:6000/ynov_projet_devops_backup_db:latest
        imagePullPolicy: ""
        name: backup-db
        ports:
        - containerPort: 1111
        resources: {}
        volumeMounts:
        - mountPath: /backups
          name: backups
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: backups
        persistentVolumeClaim:
          claimName: backups
status: {}
