collecteur-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: collecteur
  name: collecteur
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collecteur
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: collecteur
    spec:
      containers:
      - image: localhost:5000/ynov_projet_devops_collecteur:latest
        imagePullPolicy: ""
        name: collecteur
        ports:
        - containerPort: 1111
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
