unite3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: unite3
  name: unite3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: unite3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: unite3
    spec:
      containers:
      - command:
        - /start.sh
        - "3"
        image: localhost:5000/ynov_projet_devops_unite:latest
        imagePullPolicy: ""
        name: unite3
        resources: {}
        volumeMounts:
        - mountPath: /src/data_3
          name: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
