unite4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: unite4
  name: unite4
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: unite4
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: unite4
    spec:
      containers:
      - command:
        - /start.sh
        - "4"
        image: localhost:6000/ynov_projet_devops_unite:latest
        imagePullPolicy: ""
        name: unite4
        resources: {}
        volumeMounts:
        - mountPath: /src/data_4
          name: data-4
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data-4
        persistentVolumeClaim:
          claimName: data-4
status: {}
