unite5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: unite5
  name: unite5
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: unite5
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: unite5
    spec:
      containers:
      - command:
        - /start.sh
        - "5"
        image: localhost:6000/ynov_projet_devops_unite:latest
        imagePullPolicy: ""
        name: unite5
        resources: {}
        volumeMounts:
        - mountPath: /src/data_5
          name: data-5
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: data-5
        persistentVolumeClaim:
          claimName: data-5
status: {}
