backup-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: backup-db
  name: backup-db
spec:
  ports:
  - name: "1111"
    port: 1111
    targetPort: 1111
  selector:
    io.kompose.service: backup-db
status:
  loadBalancer: {}
