front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: NodePort
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: front
  type: NodePort
status:
  loadBalancer: {}
