ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: front
spec:
  rules:
  - host: kubernetes.back
    http:
      paths:
      - path: /
        backend:
          serviceName: back
          servicePort: 5000
  - host: kubernetes.front
    http:
      paths:
      - path: /
        backend:
          serviceName: front
          servicePort: 8080
